--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
   <img src="https://kentaroabe-oneforma.s3.us-east-2.amazonaws.com/oneforma.png" alt="画像の説明">
+  <img src="https://kentaroabe-oneforma.s3.us-east-2.amazonaws.com/yesterday_result.png" alt="画像の説明">
+  
+  
+  
 </body>
 </html>
