タイトル変更

--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>画像表示</title>
+  <title>翻訳在庫数</title>
 </head>
 <body>
-  <img src="https://kentaroabe-oneforma.s3.us-east-2.amazonaws.com/oneforma.png" alt="画像の説明">
-  <img src="https://kentaroabe-oneforma.s3.us-east-2.amazonaws.com/yesterday_result.png" alt="画像の説明">
-  
-  
-  
+  <img src="https://kentaroabe-oneforma.s3.us-east-2.amazonaws.com/oneforma.png" alt="翻訳在庫数">
 </body>
 </html>
